--- a/chrome_edition/manifest.json
+++ b/chrome_edition/manifest.json
@@ -1,25 +1,31 @@
 {
   "manifest_version": 3,
-  "name": "Utility kit",
+  "name": "Utility Kit",
   "version": "0.3.0",
-  "description": "Close the active tab and remove it from Recently Closed and history.",
-  "permissions": ["tabs", "history", "browsingData", "contextMenus"],
+  "description": "Small offline browser utilities",
+  "permissions": [
+    "tabs",
+    "history",
+    "browsingData",
+    "contextMenus"
+  ],
   "background": {
     "service_worker": "background.js"
   },
   "action": {
-        "default_popup": "popup.html",
-    "default_title": "Close Tab Without Trace",
-     "default_icon": {
-      "16": "icon/icon16.svg",
-      "48": "icon/icon48.svg",
-      "128": "icon/icon128.svg"
+    "default_title": "Utility Kit",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
   },
   "commands": {
-    "close_and_forget": {
+    "_execute_action": {
       "description": "Close current tab and forget it",
-      "suggested_key": { "default": "Alt+Shift+W" }
+      "suggested_key": {
+        "default": "Alt+Shift+W"
+      }
     }
   }
 }
